# yo-yo-maskr

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.old  Dockerfile_ollama  Makefile  README.md  banner.txt  docker_setup.sh  entrypoint.sh  index.html  install_dependencies.sh  main.py  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt  sample_text.txt  setup.sh  yoyomaskr.ipynb
.github/workflows/: docker-publish.yml
data/: first_names.txt  first_names_regex.pkl  first_names_trie_regex.pkl  last_names.txt  last_names_regex.pkl  last_names_trie_regex.pkl
src/: api.py  app.py  env.py  llm.py
src/api/: demask.py  health.py  mask.py
src/certbundler/: __init__.py
src/gui/: gui_demaks.py  gui_landing.py  gui_mask.py  landing.py
src/static/scripts/: demask.js  demask_downloader.js  downloader.js  fileLoader.js  form.js  mask.js  mask_downloader.js  script.js
src/static/styles/: colors.css  style.css
src/templates/: form.html
src/templates/html/: demask.html  form.html  landing.html  mask.html
src/utils/: ano_llm.py  ano_regex.py  ano_spacy.py  anonymize.py  env.py  llm.py  regex.py  replacer.py  trie.py
tests/utils/: test_backends.py  test_llm.py
yoyomaskr/: __init__.py  api.py
