[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "yoyomaskr"
packages = [
    { include = "src" }
]
version = "0.0.1"
description = "Reversible anonymisation service for us all"
license = "Apache 2.0"
authors = ["AI Circle <aicommunity@groups.baloise.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi= {extras = ["standard"], version = "^0"}
langchain-ollama= "^0"
rapidfuzz= "^3"
regex= "^2024"
python-dotenv = "^1"
mypy = "^1"
setuptools = "^0"
uvicorn = "^0"
gunicorn = "^0"
python-dateutil = "^2.9.0.post0"
tqdm = "^4.66.6"
dill = "^0.3.9"
spacy ="^3.8"
presidio_analyzer="^2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0"
ruff = "^0.7"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
pytest-benchmark = "^5.0.1"
pyahocorasick = "^2.1.0"
polars = "^1.12.0"
flashtext2 = "^1.1.0"
retrie = "^0.3.1"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
python_classes = ["Test"]
python_functions = ["test_", "it_", "and_", "but_", "they_"]
python_files = ["test_*.py"]
testpaths = [
    "tests"
]
filterwarnings = [
    "error",
    'ignore:ast.* is deprecated:DeprecationWarning',
]

